0.5.0 - progress to source decompilation, bit of refactoring, and first unit tests